feat: modify npm

--- a/packages/icons-react/src/icons/index.mdx
+++ b/packages/icons-react/src/icons/index.mdx
@@ -8,35 +8,11 @@ sidebar: true
 import '../styles/icons.css'
 import '../styles/tabs.css'
 
-import { FailedFilled } from './'
-import { AddOutlined } from './'
-import { ArrowDoubleRightOutlined } from './'
-import { ArrowDoubleLeftOutlined } from './'
-import { MinusOutlined } from './'
-import { PhotoMulticolored } from './'
-import { PPTMulticolored } from './'
-import { UnknownMulticolored } from './'
-import { PDFMulticolored } from './'
-import { TxTMulticolored } from './'
-import { ExcelMulticolored } from './'
-import { WordMulticolored } from './'
-import { SuccessFilled } from './'
+import { AggregateOutlined } from './'
 
 
 
 # Icon 图标
 
-<div className="tabs"><input type="radio" id="tab1" name="tab-control" defaultChecked /><input type="radio" id="tab2" name="tab-control" /><input type="radio" id="tab3" name="tab-control" /><ul><li title="线框风格"><label htmlFor="tab1" role="button"><span>线框风格</span></label></li><li title="实底风格"><label htmlFor="tab2" role="button"><span>实底风格</span></label></li><li title="双色风格"><label htmlFor="tab3" role="button"><span>双色风格</span></label></li></ul><div className="slider"><div className="indicator"></div></div><div className="content"><section><div className="font"><AddOutlined /><p>AddOutlined</p></div>
-<div className="font"><ArrowDoubleRightOutlined /><p>ArrowDoubleRightOutlined</p></div>
-<div className="font"><ArrowDoubleLeftOutlined /><p>ArrowDoubleLeftOutlined</p></div>
-<div className="font"><MinusOutlined /><p>MinusOutlined</p></div>
-</section><section><div className="font"><FailedFilled /><p>FailedFilled</p></div>
-<div className="font"><SuccessFilled /><p>SuccessFilled</p></div>
-</section><section><div className="font"><PhotoMulticolored /><p>PhotoMulticolored</p></div>
-<div className="font"><PPTMulticolored /><p>PPTMulticolored</p></div>
-<div className="font"><UnknownMulticolored /><p>UnknownMulticolored</p></div>
-<div className="font"><PDFMulticolored /><p>PDFMulticolored</p></div>
-<div className="font"><TxTMulticolored /><p>TxTMulticolored</p></div>
-<div className="font"><ExcelMulticolored /><p>ExcelMulticolored</p></div>
-<div className="font"><WordMulticolored /><p>WordMulticolored</p></div>
-</section></div></div>
+<div className="tabs"><input type="radio" id="tab1" name="tab-control" defaultChecked /><input type="radio" id="tab2" name="tab-control" /><input type="radio" id="tab3" name="tab-control" /><ul><li title="线框风格"><label htmlFor="tab1" role="button"><span>线框风格</span></label></li><li title="实底风格"><label htmlFor="tab2" role="button"><span>实底风格</span></label></li><li title="双色风格"><label htmlFor="tab3" role="button"><span>双色风格</span></label></li></ul><div className="slider"><div className="indicator"></div></div><div className="content"><section><div className="font"><AggregateOutlined /><p>AggregateOutlined</p></div>
+</section><section></section><section></section></div></div>
