feat: 优化&新增icons-taro

--- a/packages/icons-react/src/icons/example.mdx
+++ b/packages/icons-react/src/icons/example.mdx
@@ -20,7 +20,7 @@ import React from 'react';
 import { SmilingOutlined } from '@yee/icons-react';
 ```
 
-## 使用组件
+## 使用组件 [React/Vue]
 
 ```
 import React from 'react';
@@ -29,10 +29,11 @@ import { SmilingOutlined } from '@yee/icons-react';
 const Wrapper: React.SF = () => {
   return (
   	<div>
-    	<SmilingOutlined />
+    	<SmilingOutlined style={{ fontSize: '32px', color: '#fff' }}/>
     </div>
   )
 }
 
 export default Wrapper
 ```
+
